--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,12 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+ReleasestoreFile=zhmw.keystore
+ReleasekeyPassword=zhmw123456@
+VERSION_CODE=10
+ReleasekeyAlias=真美味
+ReleasestorePassword=zhmw123456@
+android.useDeprecatedNdk=true
+android.enableD8=true
+
 
