--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,10 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 ReleasestoreFile=zhmw.keystore
-ReleasekeyPassword=zhmw123456@
+ReleasekeyPassword=123456
 VERSION_CODE=10
-ReleasekeyAlias=真美味
-ReleasestorePassword=zhmw123456@
+ReleasekeyAlias=zhmw
+ReleasestorePassword=123456
 android.useDeprecatedNdk=true
 android.enableD8=true
 
