--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,6 @@ dependencies {
      */
     implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
 
+    implementation 'com.android.support:design:28.0.0'
+
 }
