密码登录逻辑实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.PasswordActivity" />
+        <activity android:name=".ui.activity.SetpasswordActivity">
+
+        </activity>
     </application>
 
 </manifest>
