封装好跳转携带数据

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activity.MainActivity">
+        <activity android:name=".ui.activity.home.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +23,8 @@
 
         </activity>
         <activity android:name=".ui.activity.PasswordActivity" />
-        <activity android:name=".ui.activity.SetpasswordActivity">
-
-        </activity>
+        <activity android:name=".ui.activity.SetpasswordActivity"/>
+        <activity android:name=".ui.activity.home.ShippingAddressActivity"/>
     </application>
 
 </manifest>
