验证码、密码登录接口实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ifhu.meiwei">
 
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -12,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activity.home.MainActivity">
+        <activity
+            android:name=".ui.activity.home.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,8 +28,8 @@
 
         </activity>
         <activity android:name=".ui.activity.PasswordActivity" />
-        <activity android:name=".ui.activity.SetpasswordActivity"/>
-        <activity android:name=".ui.activity.home.ShippingAddressActivity"/>
+        <activity android:name=".ui.activity.SetpasswordActivity" />
+        <activity android:name=".ui.activity.home.ShippingAddressActivity" />
     </application>
 
 </manifest>
