新增地址逻辑接口实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,7 @@
         <activity
             android:name=".ui.activity.home.MainActivity"
             android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.activity.LoginActivity">
 
@@ -30,6 +26,13 @@
         <activity android:name=".ui.activity.PasswordActivity" />
         <activity android:name=".ui.activity.SetpasswordActivity" />
         <activity android:name=".ui.activity.home.ShippingAddressActivity" />
+        <activity android:name=".ui.activity.home.AddaddressActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
