--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,15 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+ext {
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.0'
+    supportLibraryVersion = '28.0.0'
+
+    minSdkVersion = 21
+    targetSdkVersion = 28
+    versionCode = 100
+    versionName = "1.0.0"
+}
