--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,4 +120,5 @@ dependencies {
      *  权限询问
      */
     implementation 'com.yanzhenjie:permission:2.0.0-rc3'
+    implementation project(path: ':glideImageView')
 }
