--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,17 +71,16 @@ def releaseTime() {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
     /**
-     *  网络库
+     *   网络库
      */
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -91,36 +90,35 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-urlconnection:1.4.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.4.1'
     /**
-     * Log打印
+     *  Log打印
      */
     implementation 'com.orhanobut:logger:2.2.0'
-
     /**
-     *  eventbus 全局通知
+     *   eventbus 全局通知
      */
     implementation 'org.greenrobot:eventbus:3.0.0'
-
     /**
-     *  Loading加载对话框
+     *   Loading加载对话框
      */
     implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
-
     implementation 'com.android.support:design:28.0.0'
     /**
-     * 控件注入插件
+     *  控件注入插件
      */
     api 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     /**
-     * 高德地图定位
+     *  高德地图定位
      */
     implementation 'com.amap.api:location:latest.integration'
-
     /**
-     *  权限询问
+     *   权限询问
      */
     implementation 'com.yanzhenjie:permission:2.0.0-rc3'
     implementation project(path: ':glideImageView')
-
     implementation 'com.github.xiaohaibin:XBanner:1.6.7'
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.7.0@aar'
+    implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.7.0@aar'
+    implementation files('libs/tbs_sdk_thirdapp_v3.6.0.1310_43612_sharewithdownload_withoutGame_obfs_20180706_163319.jar')
 }
