--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,9 +116,18 @@ dependencies {
      */
     implementation 'com.yanzhenjie:permission:2.0.0-rc3'
     implementation project(path: ':glideImageView')
+    /**
+     * Banner图
+     */
     implementation 'com.github.xiaohaibin:XBanner:1.6.7'
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.ogaclejapan.smarttablayout:library:1.7.0@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.7.0@aar'
     implementation files('libs/tbs_sdk_thirdapp_v3.6.0.1310_43612_sharewithdownload_withoutGame_obfs_20180706_163319.jar')
+
+    /**
+     * 列表
+     */
+
+    implementation 'com.oushangfeng:PinnedSectionItemDecoration:1.3.2'
 }
