--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         <activity android:name=".ui.activity.me.MySettingsActivity" />
         <activity android:name=".ui.activity.me.MyShopJoinActivity" />
         <activity android:name=".ui.activity.me.MyVoucherActivity" />
-
+        <activity android:name=".ui.base.WebViewActivity"/>
         <service android:name="com.amap.api.location.APSService" />
 
         <meta-data
