--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         <activity android:name=".ui.activity.home.AddaddressActivity" />
         <activity android:name=".ui.activity.home.EditaddressActivity" />
         <activity android:name=".ui.activity.order.OrdertrackingActivity" />
-
+        <activity android:name=".ui.activity.home.EvaluationActivity" />
         <!--我的-->
         <activity android:name=".ui.activity.me.MyAskActivity" />
         <activity android:name=".ui.activity.me.MyCollectActivity" />
