--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,4 +130,7 @@ dependencies {
      */
 
     implementation 'com.oushangfeng:PinnedSectionItemDecoration:1.3.2'
+
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.42'
+
 }
