完成微信支付集成

--- a/glideImageView/build.gradle
+++ b/glideImageView/build.gradle
@@ -20,6 +20,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        beta {
+        }
     }
     buildToolsVersion '28.0.3'
 }
