--- a/matise/build.gradle
+++ b/matise/build.gradle
@@ -17,7 +17,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 14
@@ -29,6 +28,10 @@ android {
     }
     lintOptions {
         abortOnError false
+    }
+    buildTypes {
+        beta {
+        }
     }
 }
 
