--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ android {
         }
 
         debug {//开发环境
-            applicationIdSuffix '.debug'//包名添加后缀.debug
+            applicationIdSuffix ''//包名添加后缀.debug
             buildConfigField "String", "STRING_API_ENV", "\"2\""
             signingConfig signingConfigs.release
         }
@@ -80,7 +80,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
     /**
-     *   网络库
+     *    网络库
      */
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -90,51 +90,49 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-urlconnection:1.4.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.4.1'
     /**
-     *  Log打印
+     *   Log打印
      */
     implementation 'com.orhanobut:logger:2.2.0'
     /**
-     *   eventbus 全局通知
+     *    eventbus 全局通知
      */
     implementation 'org.greenrobot:eventbus:3.0.0'
     /**
-     *   Loading加载对话框
+     *    Loading加载对话框
      */
     implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
     implementation 'com.android.support:design:28.0.0'
     /**
-     *  控件注入插件
+     *   控件注入插件
      */
     api 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     /**
-     *  高德地图定位
+     *   高德地图定位
      */
     implementation 'com.amap.api:location:latest.integration'
     /**
-     *   权限询问
+     *    权限询问
      */
     implementation 'com.yanzhenjie:permission:2.0.0-rc3'
     implementation project(path: ':glideImageView')
     /**
-     * Banner图
+     *  Banner图
      */
     implementation 'com.github.xiaohaibin:XBanner:1.6.7'
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.ogaclejapan.smarttablayout:library:1.7.0@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.7.0@aar'
     implementation files('libs/tbs_sdk_thirdapp_v3.6.0.1310_43612_sharewithdownload_withoutGame_obfs_20180706_163319.jar')
-
     /**
-     * 列表
+     *  列表
      */
-
     implementation 'com.oushangfeng:PinnedSectionItemDecoration:1.3.2'
-
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.42'
     /**
-     * 图片选择以及剪切
+     *  图片选择以及剪切
      */
     implementation project(path: ':matise')
     implementation 'com.github.yalantis:ucrop:2.2.3-native'
+    implementation files('libs/libammsdk.jar')
 }
