--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,11 @@
 
         <activity android:name=".ui.activity.order.ConfirmPaymentActivity"/>
 
+        <activity
+            android:name=".wxapi.WXPayEntryActivity"
+            android:exported="true"
+            android:label="微信支付结果"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
