--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
         <activity android:name=".ui.activity.home.EditaddressActivity" />
         <activity android:name=".ui.activity.home.ShopHomeActivity" />
         <activity android:name=".ui.activity.order.OrdertrackingActivity" />
-        <activity android:name=".ui.activity.home.EvaluationActivity" />
+        <activity android:name=".ui.activity.order.EvaluationActivity" />
         <!--我的-->
         <activity android:name=".ui.activity.me.MyAskActivity" />
         <activity android:name=".ui.activity.me.MyCollectActivity" />
